--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/react": "11.8.1",
     "@emotion/styled": "11.8.1",
+    "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "5.4.4",
     "react": "17.0.2",
